cmake_minimum_required(VERSION 3.17)
project(CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPP
        basic/cpp_program/ch10/const_demo.cpp basic/cpp_program/ch10/const_demo.h basic/cpp_program/ch6/declare_demo.cpp basic/cpp_program/ch6/init_demo.cpp ACM/1003.cpp ACM/1000.cpp ACM/1001.cpp ACM/1002.cpp basic/cpp_program/ch16/Date.cpp basic/effictive_cpp/rule3/Rational.cpp basic/cpp_program/ch18/Person.cpp)
